# sheerwater

./: .gitignore  .gitmodules  .mcpbignore  README.md  check_new_chirps.py  chirps_debug.py  cluster.yml  gcp.yaml  gen_coverage.py  grafana-weaver-bootstrap.sh  graphcast_nulls.py  manifest.json  nuthatch.toml  pyproject.toml  regrid_chirps.py  regrid_remotely.py  run_event_tables.py  test.py  test_auc.py  test_climatology.py  test_coverage.py  test_get_coverage.py  test_precip.py  test_rlabel_clipping.py  test_station_clip.py  test_subregions.py
.github/workflows/: correctness_merg.yml  correctness_performance_test.yml  linting.yml  mcp-build.yml  mcpb-pack.yml  performance_merg.yml  publish.yml  terraform-grafana-config.yml  terraform-grafana-main.yml  test.yml
dashboard_data/: __init__.py  coverage_tables.py  generate_scatter_tables.py  metrics_tables.py  rainfall_data_explorer.py  spw_explorer.py  spw_metrics_tables.py  station_paired_analysis.py
dashboard_data_writers/: metrics_tables.py  rainfall_data_explorer.py  spw_explorer.py
dashboards/: README.md  extract_external_content.py
dashboards/src/: complete-sensor-timeseries.jsonnet  forecast-evaluation-maps---multihorizon.jsonnet  forecast-evaluation-maps.jsonnet  forecast-evaluation.jsonnet  ground-truth-evaluation.jsonnet  home.jsonnet  kenya-suitable-planting-window.jsonnet  mohini-ground-truth-with-coverage.jsonnet  precipitation-scatter-plots.jsonnet  precipitation-timeseries.jsonnet  reanalysis-evaluation.jsonnet  station-data-evaluation-map.jsonnet
dashboards/src/assets/: 2016-2022-precip.sql  auc_map.js  bfd145p7u3jlse-multimap-forecast-evaluation-call-function.js  bfd145p7u3jlse-multimap-forecast-evaluation-params.js  bt_after_ready_imports.js  bt_shared_preload_exports.js  click_precip_pt.js  color_utilities.js  colors.js  dataset_utilities.js  dfd44cgdurwn4f-singlemap-evaluation-call-function.js  dfd44cgdurwn4f-station-evaluation-params.js  ee2jzeymn1o8wf-1-script.js  ee2jzeymn1o8wf-2-script.js  ee2jzeymn1o8wf-3-script.js  ee2jzeymn1o8wf-4-script.js  ee2jzeymn1o8wf-5-afterRender.js  ee2jzeymn1o8wf-5-content.md  ee2jzeymn1o8wf-7-afterRender.js  ee2jzeymn1o8wf-7-content.txt  grid_size.sql  (+31 more)
examples/: sheerwater_walkthrough.ipynb
experiments/: point_to_pixel.py  precip_scatters.py  satellite_station_misses.py
infrastructure/: README.md
infrastructure/terraform-config/: .terraform.lock.hcl  main.tf  outputs.tf  terraform.tfvars  variables.tf
infrastructure/terraform-database/: .terraform.lock.hcl  main.tf
jobs/: __init__.py  check_forecast_validity.py  check_function.py  gen_climatology.py  gen_emcwf.py  gen_masks.py  gen_reanalysis.py  gen_salient_forecast.py  job_utils.py  metrics.yaml  run_all_coverage.py  run_all_metrics.py  run_biweekly_table_metrics.py  run_coverage_metrics.py  run_coverage_table_metrics.py  run_forecasts.py  run_global_metrics.py  run_grouped_metrics.py  run_metrics.py  run_scatters_and_timeseries.py  run_seasonal_table_metrics.py  run_spatial_metrics.py  run_station_table_metrics.py  run_table_metrics.py
mcp/: Dockerfile  README.md
mcp/chart/: Chart.yaml  values.yaml
sandbox/: check_forecast_validity.py  check_function.py  gen_abc_forecast.py  gen_climatology.py  gen_climatology2.py  gen_masks.py  gen_reanalysis.py  gen_salient_forecast.py  plotting_pie_charts_events.py
sheerwater/: __init__.py  climatology.py  masks.py  metrics.py  metrics_library.py  nuthatch.toml  precip_scatters.py  regions_and_masks.py  regions_layers.py  satellite_station_misses.py  spatial_subdivisions.py  statistics_library.py
sheerwater/baselines/: climatology.py
sheerwater/dashboard_data/: __init__.py  metrics_tables.py  rainfall_data_explorer.py  sat_by_station.py  spw_metrics_tables.py
sheerwater/data/: README.md  __init__.py  all_stations.py  chirps.py  coverage_tables.py  data_decorator.py  earthaccess_generic.py  ghcn.py  imerg.py  knust.py  rain_over_africa.py  smap.py  stations.py  tahmo.py  tamsat.py
sheerwater/decorators/: __init__.py  forecast_data_decorator.py  spatial_decorator.py
sheerwater/forecasts/: __init__.py  abc.py  ecmwf_er.py  ecmwf_er_iri.py  forecast_decorator.py  fuxi.py  gencast.py  graphcast.py  kmd_wrf.py  salient.py
sheerwater/interfaces/: __init__.py  datasets.py  spatial.py
sheerwater/mcp/: __init__.py  instructions.md  server.py
sheerwater/reanalysis/: __init__.py  cbam.py  era5.py  era5_cds.py
sheerwater/tasks/: __init__.py  spw.py
sheerwater/tests/: conftest.py  metrics_performance_baseline.json  test_basic_caching.py  test_caching.py  test_climatology.py  test_deep_cache.py  test_forecasts.py  test_grouped_metrics_performance.py  test_masks.py  test_metric_correctness.py  test_metrics.py  test_metrics_performance.py  test_precip_range.py  test_region_utils.py  test_regions_and_masks.py  test_registry_metadata.py  test_spw.py  test_station_accessors.py  test_tabular_caching.py  test_target_dates.py  test_terracotta.py  test_upsert.py  test_utils.py
sheerwater/utils/: __init__.py  caching.py  data_utils.py  forecaster_utils.py  general_utils.py  gpu_utils.py  grouping_utils.py  plotting_utils.py  region_utils.py  remote.py  secrets.py  space_utils.py  time_utils.py
sheerwater_benchmarking/: climatology.py  metrics.py  metrics_library.py  regions_and_masks.py  statistics_library.py
sheerwater_benchmarking/data/: mrms.py
sheerwater_benchmarking/forecasts/: __init__.py  ecmwf_er.py  fuxi.py  gencast.py  graphcast.py  salient.py
sheerwater_benchmarking/tests/: test_forecasts.py  test_masks.py  test_metric_correctness.py  test_metrics.py  test_precip_range.py  test_regions_and_masks.py  test_target_dates.py  test_terracotta.py
sheerwater_benchmarking/utils/: __init__.py  admin_regions.py  caching.py  forecaster_utils.py  region_utils.py  space_utils.py  time_utils.py
sheerwater_examples/: mohini_walkthrough.py
testing_archive/: test_climatology.py  test_forecasts.py  test_metric_correctness.py  test_metrics.py  test_precip_range.py  test_processors.py
tools/: cache_utils.py  copy_imerg.py  find_bad_imerg.py  fuxi-download.py
(+62 files in other folders)
